# Console-Kit

./: App.jsx  README.md  app.json  firebaseConfig.js  package-lock.json  package.json
__tests__/: Form.test.js
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sellproductform/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
android/cpp/: CMakeLists.txt  native-lib.cpp
components/: Form.jsx
ios/: Podfile
ios/SellProductForm/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/SellProductForm.xcodeproj/: project.pbxproj
ios/SellProductForm.xcodeproj/xcshareddata/xcschemes/: SellProductForm.xcscheme
screens/: AuthLoadingScreen.jsx  ForgotPasswordScreen.jsx  LoginScreen.jsx  MainAppScreen.jsx  OtpVerificationScreen.jsx  SignupScreen.jsx  UserDashboardScreen.jsx
